@@ -10,17 +10,24 @@
   hyperlinked graphical elements.
 }
 \synopsis{
-hyperlinkGrob(x, href, group=TRUE)
-grid.hyperlink(path, href, group=TRUE)
+hyperlinkGrob(x, href, show=NULL, group=TRUE)
+grid.hyperlink(path, href, show=NULL, group=TRUE)
   }
 \usage{
-grid.hyperlink(path, href, group)
+grid.hyperlink(path, href, show, group)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{path}{ A grob path specifying a drawn grob. }
   \item{href}{ A valid Xlink URI.  Can be a vector of several links
     (see \code{group} argument below). }
+  \item{show}{
+    A character vector specifying how the link should be opened.
+    \code{NULL} and \code{""} will avoid adding an attribute. The most
+    common cases are to use \code{"new"} to open a link in a new
+    window/tab, or \code{"replace"} to open the link in the current
+    window/tab.
+  }
   \item{group}{ A logical indicating whether the hyperlinks
     should be attached to the overall parent group for the
     relevant SVG element, or to individual SVG elements. }
@@ -29,6 +36,6 @@ grid.hyperlink(path, href, group)
   A linked.grob object.
 }
 \author{ Paul Murrell }
-\seealso{ \code{\link{gridToSVG}} }                           
+\seealso{ \code{\link{gridToSVG}} }
 \keyword{ dplot }% at least one, from doc/KEYWORDS
 
