@@ -5,7 +5,7 @@
 \section{Changes in version 1.0-0}{
   \itemize{
 
-    \item Bumped the SVG version number to 1.0. (Simon)
+    \item Bumped the SVG version number to 1.1. (Simon)
 
     \item Initial implementation of viewport coordinate information
     exporting. (Simon)
@@ -80,6 +80,10 @@
     to 1 range (by clamping justifications to the 0 to 1 range).
 
     \item Added 'viewBox' attribute to top-level <svg> element.
+
+    \item Adding 'show' argument to 'grid.hyperlink()'. Allows links to
+    opened in another window/tab rather than the current
+    window/tab. (Simon).
   }
 }
 
